# pib_ws

./: .gitignore
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/my_pib_description/share/my_pib_description/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/my_pib_description/share/my_pib_description/urdf/: robot.urdf
log/: latest_build
src/my_pib_description/: CMakeLists.txt  package.xml
src/my_pib_description/meshes/: .gitkeep  urdf_body1.stl
src/my_pib_description/urdf/: hello.xml  robot.urdf
src/pib_bringup/: CMakeLists.txt  package.xml
src/pib_bringup/config/: pib.ros2_control.xacro
src/pib_bringup/launch/: pib_bringup.launch.py  pib_launch.xml
src/pib_commander/: CMakeLists.txt  package.xml
src/pib_commander/src/: pib_moveit.cpp
src/pib_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/pib_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  pib.ros2_control.xacro  pib.srdf  pib.urdf.xacro  ros2_controllers.yaml
src/pib_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
