<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pib_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="1147027549@qq.com">lens</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>moveit_configs_utils</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>pib_moveit_config</exec_depend>
  <exec_depend>my_pib_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
